# deskpita-rs

./: .editorconfig  Cargo.toml  README.md
debian/: deskpita-fan.service  deskpita-shutdown.service  deskpita.service
debian/scripts/: postinst  postrm  prerm
src/: fan.rs  main.rs  services.rs
